[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "import-jpgs"
version = "1.1.3"
description = "CLI tool for importing and organizing media files by date"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pillow==12.1.1",
  "rich==13.7.1",
  "typer==0.19.2",
]

[dependency-groups]
dev = [
  "pre-commit==4.2.0",
  "pytest-cov==6.1.0",
  "pytest-mock==3.12.0",
  "pytest==8.3.5",
  "ruff==0.11.7",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]
